# advent-of-code-python

./: .gitignore  LICENSE  README.md  pyproject.toml  qa.sh  setup.cfg
src/advent_of_code/: main.py
src/advent_of_code/utils/: bingo.py  bits.py  comb_it.py  coordinates.py  fetch.py  globals.py  graph.py  grid.py  intcode.py  manhattan.py  op.py  parse.py  strings.py  submarine.py
src/advent_of_code/y2015/: d1.py  d10.py  d11.py  d12.py  d13.py  d14.py  d15.py  d16.py  d17.py  d18.py  d19.py  d2.py  d20.py  d21.py  d3.py  d4.py  d5.py  d6.py  d7.py  d8.py  d9.py
src/advent_of_code/y2017/: d1.py  d2.py  d3.py
src/advent_of_code/y2018/: d1.py  d10.py  d11.py  d2.py  d3.py  d4.py  d5.py  d6.py  d7.py  d8.py  d9.py
src/advent_of_code/y2019/: d1.py  d2.py  d3.py  d4.py  d5.py  d6.py  d7.py  d8.py  d9.py
src/advent_of_code/y2021/: d1.py  d10.py  d11.py  d12.py  (+21 more)
templates/: src.py  test.py
tests/y2018/: test_2018_d1.py  test_2018_d10.py  test_2018_d11.py  test_2018_d2.py  test_2018_d3.py  test_2018_d4.py  test_2018_d5.py  test_2018_d6.py  test_2018_d7.py  test_2018_d8.py  test_2018_d9.py
tests/y2019/: test_2019_d5.py  test_2019_d6.py  test_2019_d9.py  test_d1.py  test_d2.py  test_d3.py
tests/y2021/: test_2021_d1.py  test_2021_d10.py  test_2021_d11.py  test_2021_d12.py  test_2021_d13.py  test_2021_d14.py  test_2021_d15.py  test_2021_d16.py  test_2021_d17.py  test_2021_d18.py  test_2021_d20.py  test_2021_d21.py  test_2021_d22.py  test_2021_d25.py  test_2021_d3.py  test_2021_d4.py  test_2021_d5.py  test_2021_d6.py  test_2021_d7.py  test_2021_d8.py  test_2021_d9.py
(+90 files in other folders)
