[tool.poetry]
name = "advent_of_code"
version = "0.0.0"
description = "A Python project with solutions to Advent of Code Challenges"
authors = ["Erik Thorsell <erik@thorsell.io>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
requests = "^2.26.0"
networkx = "^2.6.3"
numpy = "^1.21.4"
matplotlib = "^3.6.2"
z3-solver = "^4.11.2.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.4b2"
flake8 = "^3.9.1"

[tool.poetry.scripts]
advent_of_code = "advent_of_code.main:main"

[tool.pytest.ini_options]
testpaths = [
    "tests/y2019",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
